bk_ida/gccida/g1/find_oldest_value_reg
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_oldest_value_reg/src/regrename.c:1776:29: error: must use 'enum' tag to refer to type 'reg_class'
rtx  find_oldest_value_reg( reg_class a1, rtx reg,  struct value_data *vd) 
                            ^
                            enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_oldest_value_reg/src/regrename.c:1781:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // r10d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_oldest_value_reg/src/regrename.c:1788:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_oldest_value_reg/src/regrename.c:1837:23: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( mode_class_0[v6] - 5) <= 1 ) 
                      ^~~~~~~~~~~~
                      mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_oldest_value_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_oldest_value_reg/src/regrename.c:1851:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v11 = ( ( unsigned int)( mode_class_0[mode] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_oldest_value_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_oldest_value_reg/src/regrename.c:1854:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v10 = ( ( unsigned int)( mode_class_0[v6] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_oldest_value_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_oldest_value_reg/src/regrename.c:1855:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v18 = mode_class_0[mode] - 5; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_oldest_value_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_oldest_value_reg/src/regrename.c:1872:33: error: use of undeclared identifier 'machine_mode'
result = gen_rtx_fmt_i0( REG, ( machine_mode)v6, oldest_regno); 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_oldest_value_reg/src/regrename.c:1873:24: error: assigning to 'uint32' (aka 'unsigned int') from incompatible type 'struct rtx_def'
*( _DWORD *)&result[1] = reg[1]; 
                       ^ ~~~~~~
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_oldest_value_reg/src/obj/regrename.o] Error 1
